--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
     <title>
         
-            404 Page not found :: brlab.ai  — Hello Friend NG Theme
+            404 Page not found :: brlab.ai  — brlab.ai
         
     </title>
 
