--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
 
             <h1>BRLab</h1>
                 <p>Biomedical Research Lab</p>
+		<a href="https://drive.google.com/uc?id=1bBBP4oRK6NlrZaRItSo88egL5qHEtPbv&export=download">
+                <h4 style="display: block;">Download brochuer</h4>
+            </a>
         </div>
     </main>
 
